--- a/cau1.html
+++ b/cau1.html
@@ -10,38 +10,67 @@
 
 <body>
     <script>
-        let a = 8;
-        let b = 12;
-        let c = -20;
+        function quadraticEquation(A, B, C) {
 
-        let Delta = b * b - 4 * a * c;
-        let x1 = (-b - Math.sqrt(Delta)) / (2 * a);
-        let x2 = (-b + Math.sqrt(Delta)) / (2 * a);
-        let x = (-b) / (2 * a);
-        if (a == 0) {
-            if (b == 0) {
-                if (c == 0) {
-                    document.write('Phương trình có vô số nghiệm.');
+            if (A == 0) {
+
+                if (B == 0) {
+
+                    if (C == 0) {
+
+                        alert(`Phương trình có vô số nghiệm.`);
+
+                    }
+                    
+                    else {
+
+                        alert(`Phương trình vô nghiệm.`);
+
+                    };
+
                 }
+
                 else {
-                    document.write('Phương trình vô nghiệm');
+
+                    alert(`Phương trình có nghiệm duy nhất là: ${(-C / B)}`);
+
+                };
+
+            }
+
+            else {
+
+                const delta = (B * B) - (4 * A * C);
+
+                if (delta > 0) {
+
+                    const x1 = (-B + Math.sqrt(delta)) / (2 * A);
+                    const x2 = (-B - Math.sqrt(delta)) / (2 * A);
+
+                    alert(`Phương trình có nghiệm là: x1 = ${x1} và x2 = ${x2}`);
+
                 }
-            }
-            else {
-                document.write(`Phương trình có nghiệm duy nhất: x= ${(-c) / b}`);
-            }
-        }
-        else {
-            if (Delta > 0) {
-                document.write(`Phương trình có 2 nghiệm phân biệt: x1=${(-b + Math.sqrt(Delta)) / (2 * a)}; x2= ${(-b - Math.sqrt(Delta)) / (2 * a)}`);
-            }
-            else if (Delta == 0) {
-                document.write(`Phương trình có nghiệm kép: x1=x2=${-b / (2 * a)}`);
-            }
-            else {
-                document.write('Phương trình vô nghiệm');
-            }
-        }
+
+                else if (delta == 0) {
+
+                    const sum = (-B / 2 * A);
+
+                    alert(`Phương trình có nghiệm kép là: x1 = x2 = ${sum}`);
+
+                }
+
+                else {
+
+                    alert(`Phương trình vô nghiệm.`);
+
+                };
+
+            };
+
+        };
+
+        quadraticEquation(8, 12, -20);
+
     </script>
 </body>
 
